[package]
name = "proxynet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["full", "client", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
