[package]
name = "proxynet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
hyper = { version = "1.8.1", features = ["full", "client", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
