[package]
name = "proxynet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full", "client", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["client-legacy", "http1", "http2", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
